replacing index.html with html code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World from index.html
+<!DOCTYPE html>
+<html>
+
+   <head>
+	<title>Hello</title>
+	<meta charset="utf-8">
+	<style type="text/css">
+	 p {
+		font-size: 14px;
+		color: red;
+	   }
+ 	</style>
+   </head>
+
+   <body>
+ 	<h1>Header</h1>
+	<p>Hello World!</p>
+   </body>
+
+</html>
