--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
 	<meta charset="utf-8">
-	<title>Josie's First Bitstarter</title>
+	<title>Phone Buddy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -72,7 +72,7 @@
          padding: 2% 0%; 
              }
       .actions {
-        background-color: #343434;
+        background-color: #CCCCFF;
         padding: 3% 0%;
       }
 
@@ -119,7 +119,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Bitstarter</a>
+          <a class="brand" href="#">Phone Buddy</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -140,19 +140,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Phone Buddy</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Feel secure with kids a phonecall away</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.istockimg.com/file_thumbview_approve/19741017/2/stock-photo-19741017-family-in-palm-concept.jpg">
         </div>
 
        <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -164,17 +164,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>1000</h3> <p>backers</p>
+                <h3>100</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$1</h3> <p>of $100</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <h3>30</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -183,8 +183,8 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+              <div class="bar bar-success" style="width: 10%;"></div>
+              <div class="bar bar-warning" style="width: 90%;"></div>
             </div>
           </div>
           <div class="span6 offset3 order">
@@ -207,21 +207,24 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.istockimg.com/file_thumbview_approve/9910842/2/stock-photo-9910842-happy-parents-piggybacking-their-children.jpg">
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+Phone Buddy is a mobile phone application that turns a regular smartphone into 
+a restricted phone that kids can use to keep in touch with their parents, as 
+well as allow parents to track where their kids are.
+</p>
+<p>                                                                          
+Phone Buddy allows for many different modes that allows you to turn off certain applications and features, allowing parents and caregivers to feel comfortable letting their young children play with their phone without the risk of deleting important information (such as photos or contacts), or accidentally calling a work colleague!
+</p>
+<p>                                                                          
+Phone Buddy is perfect for your 9 year old son who wants to walk around the 
+block by himself, but you want to be sure he can call you (without calling
+anyone else!)
+</p>
+<p>                                                                          
+Phone Buddy is ideal for your todder who wants to play games while waiting with you at a Doctor's appointment, while ensuring she can't delete anything off yourphone.
           </p>
         </div>
       </div>
@@ -229,21 +232,21 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+With Phone Buddy in 'kid mode' you can:       
+<ul>
+  <li>Select which phone numbers your phone can call </li>
+  <li>Enable GPS tracking so you always know where your kid is</li>
+  <li>Set off alerts so that you know when your kid arrives/leaves a predetermined destination</li>
+  <li>Ensure nothing will be deleted by setting the phone to read-only mode</li>
+  <li>Turn your phone into a baby monitor</li>
+  <li>Play 'white noise' to help your baby sleep</li>
+  <li>Configure multiple different modes, so that you can use your phone for helping your baby go to sleep, or switch easily to a new mode so that your 10 year old can walk to school on his own comfortable in the knowledge that he can call you id needed</li>
+
+</ul>
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.istockimg.com/file_thumbview_approve/17082579/2/stock-photo-17082579-friends-looking-over-a-text-message.jpg">
         </div>
       </div>
 
@@ -258,25 +261,81 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseOne">
-                    What does FAQ stand for?
+                    What is Phone Buddy?
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Frequently Asked Question.
+                    Phone Buddy is a smartphone application that turns a phone into a kid friendly device that allows kids to call only certain numbers, not delete anything important, play white noise, and much much more
+                  </div>
+                </div>
+              </div>
+            <div class="accordion" id="accordion2">
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseTwo">
+                    What phones does Phone Buddy support?
+                  </a>
+                </div>
+                <div id="collapseTwo" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Phone Buddy will be available for both IPhone and Android
+                  </div>
+                </div>
+              </div>
+            <div class="accordion" id="accordion2">
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseThree">
+                    Is Phone Buddy available now?
+                  </a>
+                </div>
+                <div id="collapseThree" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Phone Buddy is not currently available, but is expected to be available in Fall 2013
+                  </div>
+                </div>
+              </div>
+            <div class="accordion" id="accordion2">
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseFour">
+                    Is there a testing program I can be part of?
+                  </a>
+                </div>
+                <div id="collapseFour" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Phone Buddy is currently being tested by a selected group of families.  If you are interested in being part of our testing program please contact us on the link above.
+                  </div>
+                </div>
+              </div>
+            <div class="accordion" id="accordion2">
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseFive">
+                    How much will Phone Buddy cost?
+                  </a>
+                </div>
+                <div id="collapseFive" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Phone buddy will be available for 99c for the basic version, with options to upgrade to more feature rich versions (price to be determined)
                   </div>
                 </div>
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseTwo">
-                    What's a Frequently Asked Question?
+                     data-parent="#accordion2" href="#collapseSix">
+                    Who is Phone Buddy intended for?
                   </a>
                 </div>
-                <div id="collapseTwo" class="accordion-body collapse">
+                <div id="collapseSix" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    A question which is commonly asked by users.
+                    Phone Buddy is intended to be used by busy families, who would like a simple and easy way to keep in touch with their kids. 
                   </div>
                 </div>
               </div>
