--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
       .footer a { 
         color: #ccccff; 
        }
+ /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */
+  div.addthis_toolbox {
+   width:180px;
+   margin: 0 auto;
+  }
     </style>
   </head>
 
@@ -193,10 +198,18 @@
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
           <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+<!-- AddThis Button BEGIN -->
+<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+<a class="addthis_button_preferred_1"></a>
+<a class="addthis_button_preferred_2"></a>
+<a class="addthis_button_compact"></a>
+<a class="addthis_counter addthis_bubble_style"></a>
+</div>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fd828a4d80d4aa"></script>
+<!-- AddThis Button END -->
+
+
           </div>
         </div>
       </div>
