--- a/index.html
+++ b/index.html
@@ -208,9 +208,18 @@ ga('send', 'pageview');
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
           </div>
           <div class="span8 offset2 social">
+
+<a class="coinbase-button" 
+data-button-style="custom_large"
+data-button-text="Preorder with Bitcoin"
+data-code="dc7f3ea183db4de2bf7376b0de55e696" 
+href="https://coinbase.com/checkouts/dc7f3ea183db4de2bf7376b0de55e696">
+Preorder with Bitcoin</a>
+<script src="https://coinbase.com/assets/button.js" 
+type="text/javascript"></script>
+
 <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_preferred_1"></a>
