--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" type="text/css" />
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" type="text/css" />
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"  rel="stylesheet" type="text/css" />
     <style type="text/css">
 
       /* Large desktop */
@@ -170,13 +170,14 @@ ga('send', 'pageview');
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://i.istockimg.com/file_thumbview_approve/19741017/2/stock-photo-19741017-family-in-palm-concept.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="http://i.istockimg.com/file_thumbview_approve/19741017/2/stock-photo-19741017-family-in-palm-concept.jpg">
         </div>
 
        <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+          <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
@@ -193,10 +194,12 @@ ga('send', 'pageview');
               <div class="span4">
                 <div class="linediv-r">
                 <h3>30</h3> <p>days left</p>
-                </div>
+           
               </div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -205,10 +208,14 @@ ga('send', 'pageview');
               <div class="bar bar-warning" style="width: 90%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
 
 <a class="coinbase-button" 
@@ -233,6 +240,7 @@ type="text/javascript"></script>
 
 
           </div>
+          </div>
         </div>
       </div>
 
@@ -242,7 +250,7 @@ type="text/javascript"></script>
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://i.istockimg.com/file_thumbview_approve/9910842/2/stock-photo-9910842-happy-parents-piggybacking-their-children.jpg">
+          <img class="img-polaroid" alt="Placeholder" src="http://i.istockimg.com/file_thumbview_approve/9910842/2/stock-photo-9910842-happy-parents-piggybacking-their-children.jpg">
         </div>
         <div class="span5 copy">
           <p>
@@ -281,7 +289,7 @@ With Phone Buddy in 'kid mode' you can:
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://i.istockimg.com/file_thumbview_approve/17082579/2/stock-photo-17082579-friends-looking-over-a-text-message.jpg">
+          <img class="img-polaroid" alt="Placeholder"   src="http://i.istockimg.com/file_thumbview_approve/17082579/2/stock-photo-17082579-friends-looking-over-a-text-message.jpg">
         </div>
       </div>
 
